k8s/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: bluegreen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      color: green
  template:
    metadata:
      labels:
        app: frontend
        color: green
    spec:
      containers:
        - name: frontend
          image: bluegreen-frontend-green:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3200
          readinessProbe:
            httpGet:
              path: /
              port: 3200
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3200
            initialDelaySeconds: 15
            periodSeconds: 20
